# julia4j

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: pr-test.yml  publish.yml
gradle/wrapper/: gradle-wrapper.properties
src/main/java/org/julia/jni/: NativeUtils.java
src/main/java/org/julia/jni/swig/: Julia4J.java  Julia4JJNI.java  SWIGTYPE_p_bool_t.java  SWIGTYPE_p_f_p_jl_method_t__void.java  SWIGTYPE_p_ios_t.java  SWIGTYPE_p_jl_array_t.java  SWIGTYPE_p_jl_binding_t.java  SWIGTYPE_p_jl_code_info_t.java  SWIGTYPE_p_jl_code_instance_t.java  SWIGTYPE_p_jl_datatype_t.java  SWIGTYPE_p_jl_function_t.java  SWIGTYPE_p_jl_libhandle.java  SWIGTYPE_p_jl_method_instance_t.java  SWIGTYPE_p_jl_method_t.java  SWIGTYPE_p_jl_methtable_t.java  SWIGTYPE_p_jl_module_t.java  SWIGTYPE_p_jl_svec_t.java  SWIGTYPE_p_jl_sym_t.java  SWIGTYPE_p_jl_tvar_t.java  SWIGTYPE_p_jl_typename_t.java  SWIGTYPE_p_jl_unionall_t.java  SWIGTYPE_p_jl_value_t.java  SWIGTYPE_p_long_long.java  SWIGTYPE_p_p_ios_t.java  SWIGTYPE_p_p_jl_array_t.java  SWIGTYPE_p_p_jl_gcframe_t.java  SWIGTYPE_p_p_jl_value_t.java  SWIGTYPE_p_p_void.java  SWIGTYPE_p_size_t.java  SWIGTYPE_p_unsigned_char.java  SWIGTYPE_p_void.java  julia4jJAVA_wrap.c
src/main/java/org/julia/scripting/: JuliaEngine.java  JuliaEngineBindings.java  JuliaScriptEngineFactory.java
src/test/java/: Julia4JJNITest.java  Julia4JScriptingTest.java
swig/: .gitignore  CMakeLists.txt  FindJULIA.cmake  build.sh  julia4j.i
swig/helpers/: string_wrapper.c  string_wrapper.h
swig/lib_src/: Makefile  julia4j_wrap.c
